GO 1.19.3, GO_ETH 1.10.26

--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -7,7 +7,7 @@ on:
     types: [created]
 
 concurrency:
-  group: "buildpush"
+  group: "buildpush-ghcr"
   cancel-in-progress: true
     
     
@@ -31,8 +31,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Repo Naming Convention
+      - name: Generate repository name
         run: |
           echo "REPOSITORY_PATH=$( echo ${GITHUB_REPOSITORY} | tr '[:upper:]' '[:lower:]' )" >> ${GITHUB_ENV}
           echo "REPOSITORY_SHA=$( echo ${GITHUB_SHA} | cut -c 1-7 )" >> ${GITHUB_ENV}
