--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -7,7 +7,7 @@ on:
     types: [created]
 
 concurrency:
-  group: "buildpush-ghcr"
+  group: "docker-image"
   cancel-in-progress: true
     
     
@@ -25,20 +25,24 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Generate repository name
+      -
+        name: Generate repository name
         run: |
           echo "REPOSITORY_PATH=$( echo ${GITHUB_REPOSITORY} | tr '[:upper:]' '[:lower:]' )" >> ${GITHUB_ENV}
           echo "REPOSITORY_SHA=$( echo ${GITHUB_SHA} | cut -c 1-7 )" >> ${GITHUB_ENV}
-      - name: Build and Push
+      -
+        name: Build and Push
         uses: docker/build-push-action@v3
         with:
           context: .
+          platforms: linux/amd64,linux/arm64/v8     
           push: ${{ github.event_name == 'release' && github.event.action == 'created' }}
           tags: |
             ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.event.release.tag_name }}
