--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -9,8 +9,10 @@ on:
 concurrency:
   group: "docker-image"
   cancel-in-progress: true
-    
-    
+
+env:
+  DOCKER_BUILDKIT: "1"
+
 jobs:
   docker:
     runs-on: ubuntu-latest
