--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -20,9 +20,6 @@ env:
 
 jobs:
   docker:
-    strategy:
-      matrix:
-        arch: [linux/amd64, linux/arm64/v8]
     runs-on: ubuntu-latest
     steps:
       -
@@ -52,7 +49,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: ${{ matrix.arch }}
+          platforms: linux/amd64
           push: ${{ github.event_name == 'release' && github.event.action == 'created' }}
           tags: |
             ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.event.release.tag_name }}
