--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -49,8 +49,10 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64, linux/arm64
           push: ${{ github.event_name == 'release' && github.event.action == 'created' }}
+          build-args: |
+            VERSION=${{ github.event.release.tag_name }}
           tags: |
             ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.event.release.tag_name }}
             ghcr.io/${{ env.REPOSITORY_PATH }}:${{ env.REPOSITORY_SHA }}
