--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
         name: release
         uses: actions/create-release@v1
         env:
