--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -1,15 +1,9 @@
 name: Deploy Image CI
 
 on:
-  workflow_dispatch:
-  pull_request:
-    branches:
-      - main
   push:
-    branches:
+    tags:
       - "*"
-  release:
-    types: [created]
 
 concurrency:
   group: "docker-image"
@@ -25,6 +19,17 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+      -
+        name: GitHub Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body_path: CHANGELOG.md
+          draft: false
+          prerelease: false        
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
