--- a/.github/workflows/ci-image.yml
+++ b/.github/workflows/ci-image.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64, linux/arm64
           push: false
           build-args: |
             VERSION=latest
