--- a/.github/workflows/ci-image.yml
+++ b/.github/workflows/ci-image.yml
@@ -6,7 +6,7 @@ on:
       - main
   push:
     branches:
-      - "*"
+      - '*'
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -31,3 +31,4 @@ jobs:
           push: false
           build-args: |
             VERSION=latest
+            IMAGE_VERSION=stable-slim
