--- a/.github/workflows/ghcr-image.yml
+++ b/.github/workflows/ghcr-image.yml
@@ -51,8 +51,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          build-args: "VERSION=${{ github.ref_name }}\nIMAGE_VERSION=unstable-slim            \n"
-          tags: "ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.ref_name }}\nghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.ref_name }}-unstable-slim            \nghcr.io/${{ env.REPOSITORY_PATH }}:${{ env.REPOSITORY_SHA }}\nghcr.io/${{ env.REPOSITORY_PATH }}:unstable-slim\n"
+          build-args: VERSION=${{ github.ref_name }} IMAGE_VERSION=unstable-slim
+          tags: ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.ref_name }}-unstable-slim ghcr.io/${{ env.REPOSITORY_PATH }}:unstable-slim
       - name: GitHub Release
         uses: actions/create-release@v1
         env:
